# WortMeister

./: .env.example  .gitignore  README.md  settings.gradle
.github/workflows/: ai-service-ci.yml  backend-ci.yml  deploy.yml  mobile-ci.yml
apps/admin/: README.md  package.json
apps/admin/src/: main.tsx  styles.css
apps/mobile/: .env.example  App.tsx  README.md  app.json  babel.config.js  jest.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/src/app/navigation/: AppNavigator.tsx  types.ts
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DISASTER_RECOVERY.md  ENVIRONMENTS.md  INSTALLATION.md  SECURITY.md  UML.md  USER_MANUAL.md
infra/backup/: mysql-backup.sh  mysql-restore.sh
infra/compose/: docker-compose.local.yml
infra/k6/: load-test.js
infra/monitoring/elk/: logstash.conf
infra/monitoring/prometheus/: prometheus.yml
infra/nginx/: nginx.conf
postman/: WortMeister.postman_collection.json
services/ai-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/ai-service/app/: main.py
services/ai-service/app/api/: routes.py
services/ai-service/app/core/: cache.py  config.py  errors.py  logging.py  retry.py  security.py
services/ai-service/app/providers/: base.py  factory.py  gemini_provider.py  local.py  openai_provider.py
services/ai-service/app/schemas/: common.py  requests.py  responses.py
services/ai-service/app/services/: ai_features.py  embeddings.py
services/ai-service/tests/: test_api.py
services/api/: Dockerfile  build.gradle
(+116 files in other folders)
