[project]
name = "wortmeister-ai-service"
version = "0.1.0"
description = "FastAPI AI microservice for WortMeister."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "redis>=5.0.0",
  "structlog>=24.4.0",
  "langchain>=0.2.14",
  "langchain-openai>=0.1.22",
  "langchain-google-genai>=1.0.10",
  "openai>=1.42.0",
  "google-generativeai>=0.7.2",
  "sentence-transformers>=3.0.1",
  "faiss-cpu>=1.8.0.post1",
  "numpy>=1.26.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
